# qazaqcinema

./: .dockerignore  .env.example  .env.prod.example  .env.test  .gitignore  CLAUDE.md  DEPLOY.md  Dockerfile  PLAN.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  start.sh
app/: main.py  worker.py
app/api/: app.py
app/api/routers/: auth.py  catalog.py  health.py  me.py  payments.py  public_seo.py
app/api/schemas/: auth.py  movie.py  payment.py  tariff.py
app/api/templates/: catalog.html  movie.html
app/application/ports/: broadcast.py  catalog_cache.py  images.py  lock.py  payments.py  rate_limit.py  repositories.py  security.py  session.py  storage.py  telegram.py
app/application/services/: auth_service.py  broadcast_service.py  catalog_service.py  ingestion_service.py  moderation_service.py  payment_service.py  playback_service.py  seo_service.py  stars_service.py  subscription_service.py  video_retention_service.py
app/bot/: security.py  setup.py
app/bot/handlers/: add_movie.py  broadcast.py  channel_post.py  inline_query.py  moderation.py  stars.py  start.py
app/bot/keyboards/: add_movie.py  common.py  moderation.py
app/config/: settings.py
app/domain/: registry.py
app/domain/catalog/: categories.py
app/domain/entities/: delivery.py  enums.py  movie.py  subscription.py  user.py
app/domain/parsing/: caption_parser.py  parsed_movie.py
app/domain/seo/: __init__.py  slug.py
app/domain/subscription/: expiry.py
app/domain/tariffs/: catalog.py  (+1 more)
app/infrastructure/: scheduler.py
migrations/: env.py
migrations/versions/: 20260628_movie_titles_and_search.py  20260704_movie_featured_hero.py  20260706_movie_play_count.py  20260706_user_notifications.py  20260708_video_deliveries.py  20260715_video_deliveries_created_at_index.py  20260715_video_deliveries_retry.py  20260720_movie_multi_category.py  c2d3c2c343d2_initial.py
tests/: conftest.py  test_admins.py  test_auth_dep.py  test_auth_router.py  test_auth_service.py  test_broadcast_queue.py  test_broadcast_service.py  test_cache.py  test_caption_parser.py  test_catalog_home.py  test_catalog_service.py  test_config.py  test_expiry.py  test_image_processor.py  test_ingestion_service.py  test_init_data.py  test_kaspi_provider.py  test_moderation_service.py  test_movie_dto.py  test_notifier.py  test_payment_service.py  test_playback_service.py  test_rate_limit_dep.py  test_repositories.py  test_seo_service.py  test_stars_provider.py  test_stars_service.py  test_subscription_service.py  test_tariffs.py  test_user.py  test_video_retention_service.py  test_worker.py
web/: .env.example  Caddyfile  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.node.json  tsconfig.tsbuildinfo  vite.config.ts
web/nginx/: 40-qc-config.sh  http.conf  https.conf.template
web/src/: App.tsx  index.css  main.tsx
(+43 files in other folders)
