[project]
name = "qazaqcinema"
version = "0.1.0"
description = "QazaqCinema — онлайн-кинотеатр (Netflix-style) внутри Telegram: бот + Web App"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "Proprietary" }
authors = [{ name = "beka" }]

dependencies = [
    # --- bot ---
    "aiogram>=3.13,<4",
    # --- api ---
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.12",      # загрузка файла чека (multipart/form-data)
    # --- media ---
    "pillow>=11",                    # валидация + нормализация постеров/hero-баннеров
    # --- db ---
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    # --- cache / cooldown (опционально, задел) ---
    "redis>=5.2",
    # --- DI / scheduler / config ---
    "dishka>=1.4",
    "apscheduler>=3.11",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

# ---------------------------------------------------------------------------
# Линтер / форматтер
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py313"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pyflakes / pycodestyle
    "I",             # isort
    "UP",            # pyupgrade
    "B",             # bugbear
    "C4",            # comprehensions
    "SIM",           # simplify
    "RUF",           # ruff-specific
]
ignore = [
    "RUF001", "RUF002", "RUF003",  # «неоднозначный» Unicode: проект на русском, это норма
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]            # re-export в пакетах — это норма
"app/api/routers/*" = ["B008"]      # Form()/File()/Depends() в дефолтах — паттерн FastAPI
"app/api/deps/*" = ["B008"]         # Depends() в дефолтах зависимостей — тот же паттерн FastAPI

# ---------------------------------------------------------------------------
# Типизация (strict)
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]
warn_unused_ignores = true
warn_redundant_casts = true
show_error_codes = true
exclude = ["migrations/"]

[[tool.mypy.overrides]]
module = ["apscheduler.*"]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Тесты
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"
